# cc_wp_book

./: .gitignore  README.md  manifest.yaml  pyproject.toml  run
.github/workflows/: ci.yml
src/cc_wp_book/: __init__.py  assemble.py  cache.py  callout.py  cli.py  config.py  fetch.py  parse.py  render.py
styles/: print.css
tests/: test_assemble.py  test_cache.py  test_callout.py  test_config.py  test_fetch.py  test_parse.py  test_render.py
